--- a/movie-recommendation/영화 추천 로직 소개.md
+++ b/movie-recommendation/영화 추천 로직 소개.md
@@ -1,1 +1,15 @@
+# 영화 추천 로직 소개
 
+- 활용 데이터 : kaggle
+[영화 데이터셋](https://www.kaggle.com/datasets/tmdb/tmdb-movie-metadata/data)
+
+
+## 추천 로직 간단한 설명
+> 위의 영화 리스트를 추출하는 부분은 Azure Function App 에서 작동하도록 함
+1. 전달 받을 감정과 장르를 매칭
+2. 전달 받은 타입 별로 감정을 고려해야하는 지 나눔
+3. 감정 고려가 필요한 타입
+   - 매칭된 장르에 속하는 영화들 중 평점이 평균 이상인 영화 파악
+   - 파악된 영화들을 후보군에 넣고 10개의 영화를 랜덤하게 추천
+4.  감정 고려가 필요하지 않은 타입
+     - 평점과 인기도 기반으로 랜덤하게 10개의 영화 추천
