Update 전달 받은 파일 정리.md
내용 추가 (아직 미완성)

--- a/web page 제공 파일/5.30 제공/전달 받은 파일 정리.md
+++ b/web page 제공 파일/5.30 제공/전달 받은 파일 정리.md
@@ -1,1 +1,8 @@
+# 웹 페이지 구성 파일
 
+
+__일단 코드는 제공하지 않음 제공되는 코드는 내가 주요 내용 추가하여 수정된 경우의 코드만 제공__
+
+
+
+<img width="765" alt="스크린샷 2024-06-07 오후 2 27 19" src="https://github.com/oIfloraIo/Emotion-based-movie-recommendation/assets/102645357/18e400e3-36be-4cc5-9685-4e5171701d43">
