Update 전달 받은 파일 정리.md

--- a/web page 제공 파일/5.30 제공/전달 받은 파일 정리.md
+++ b/web page 제공 파일/5.30 제공/전달 받은 파일 정리.md
@@ -1,8 +1,20 @@
 # 웹 페이지 구성 파일
 
 
-__일단 코드는 제공하지 않음 제공되는 코드는 내가 주요 내용 추가하여 수정된 경우의 코드만 제공__
+__일단 코드는 제공하지 않음 제공되는 코드는 직접 주요 내용 추가하여 수정된 경우의 코드만 제공__
 
+추가/수정된 코드 파일 (작동되는 부분)
+- 게시물 작성 후, 감정 분석이 이뤄지는 페이지
+    (write_post_page.php)
 
+오류/정상 작동이 안되는 파일
+- emotion_result.php , recommend_movies.php , Join.php / Join_page.html
 
 <img width="765" alt="스크린샷 2024-06-07 오후 2 27 19" src="https://github.com/oIfloraIo/Emotion-based-movie-recommendation/assets/102645357/18e400e3-36be-4cc5-9685-4e5171701d43">
+
+emotion_result.php 와 recommend_movies.php 의 경우에는
+
+기존 제공받은 코드에서 type 선언이 통일되지 않아 입력값 전달이 Null 값이 전달되었던 문제,
+함수 앱 api 연결이 안되어 있어 결과값이 불러와지지 않는 문제에 대한 수정하여 업로드 함.
+
+__web page connect 폴더에 업로드 되어 있음__
