Update and rename 전달받은 코드 관련 정리.md to web page connect/전달받은 코드 관련 정리.md
이동

--- a/web page connect/전달받은 코드 관련 정리.md
+++ b/web page connect/전달받은 코드 관련 정리.md
@@ -37,4 +37,4 @@ emotion_result.php 와 recommend_movies.php 의 경우에는
 
 [수정/추가하여 실행한 코드 파일](https://github.com/oIfloraIo/Emotion-based-movie-recommendation/tree/main/web%20page%20connect)
 
-__web page connect 폴더에 업로드 되어 있음__
+__직접 수정한 코드들은 web page connect 폴더(위의 링크)에 업로드 되어 있음__
